# drf

./: .gitignore  pyproject.toml
drfcatalog/: db.sqlite3  manage.py
drfcatalog/drfcatalog/: asgi.py  settings.py  urls.py  wsgi.py
drfcatalog/magazine/: admin.py  models.py  serializers.py  views.py
drfcatalog/magazine/migrations/: 0001_initial.py  0002_alter_watch_manufacturer.py
